--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ layout: default
                     </div>
                     <div class="col-sm-8">
                         <div class="intro">
-                            <p class="drop-cap">Lorem ipsum dolor sit amet, <strong>consectetur adipisicing elit</strong>. <a href="#">Tempore</a>, <a href="#">esse</a>, <a href="#">nemo</a>, <em>cum dolorem id cumque</em>, accusantium laudantium impedit ipsam voluptate quod ut veritatis aliquid numquam minima eveniet facere. <u>Incidunt, expedita.</u></p>
-                            <p>Corrupti, recusandae, officiis, nam possimus iure placeat ratione quos eligendi sint nihil omnis amet accusantium voluptatem eius nobis expedita architecto dolor ab.</p>
-                            <p>Quod tempore facilis deserunt ipsa maxime optio sint hic nesciunt! Ipsa, debitis, modi harum blanditiis tempore maiores laudantium et praesentium provident tempora. Doloribus, error, perferendis, cupiditate, iste suscipit est ab quo nemo quaerat nisi reprehenderit quam dolorum nam amet sapiente. Eius, quo error consequuntur.</p>
+                            <p class="drop-cap">Pushing boundaries, exciting new challenges, that's what drives me. Those boundaries are sometimes physical. I cross borders to discover new languages and cultures. At other times my boundaries are technological. So I turn to state-of-the-art technologies to overcome technical barriers. At all times, pushing the boundaries is an immensely rewarding experience.</p>
+                            <p>I'm a software engineer perpetually on the lookout for challenging new projects. I'm an inspiring technologists in search of creative solutions and engineering excellence. In my professional life I like to draw on my personal experiences. My creativity is in no small part due to years of travel and an itinerant lifestyle. I draw enormous inspiration from languages and cultures.</p>
+                            <p>A new language may take years to master. A different culture can be confounding at first. But learning about both changes your worldview for good. New programming languages and different modelling paradigms serve the same purpose to a software engineer in search of excellence, these open up a host of potential solutions. That's why I collect all with a passion.</p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@ layout: default
                                     <div class="col-sm-8">
                                         <p class="title-style">Bachelor of Science with Honours in Artificial Intelligence</p>
                                         <p>First-class honours
-                                            <br>I was ararded the <strong>Robert Mitchell Medal</strong> for best educational record in any discipline.
+                                            <br>I was awarded the <strong>Robert Mitchell Medal</strong> for best educational record in any discipline.
                                         </p>
                                     </div>
                                 </div>
@@ -103,8 +103,8 @@ layout: default
                                         <p class="tag sm-text-center">Aug. 2010 - Now</p>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p class="title-style">Digital Communucations Officer</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, distinctio rerum id dolores excepturi odio earum adipisci ullam quasi amet obcaecati nam repellendus vero rem magni molestiae veniam quae beatae.</p>
+                                        <p class="title-style">Digital Communications Officer</p>
+                                        <p>&nbsp;</p>
                                     </div>
                                 </div>
                             </li>
@@ -116,7 +116,7 @@ layout: default
                                     </div>
                                     <div class="col-sm-8">
                                         <p class="title-style">Multimedia Specialist</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maiores, deserunt, autem cupiditate excepturi ea culpa a tempore quo quia cum optio neque quis consequatur quod perspiciatis id nam consequuntur.</p>
+                                        <p>&nbsp;</p>
                                     </div>
                                 </div>
                             </li>
@@ -152,20 +152,18 @@ layout: default
                                 </dl>
                             </li>
                             <li>
-                                <p>I'd like to get more exposure to <strong>Haskell</strong>, <strong>Clojure</strong>, <strong>miniKanren</strong> and <strong>Elm</strong>.</p>
+                                <p>I'd like to get more exposure to languages such as <strong>Haskell</strong>, <strong>Clojure</strong>, <strong>miniKanren</strong> and <strong>Elm</strong>.</p>
                             </li>
                             <li>
                                 <p>I have a well-rounded DevOps skill.</p>
                                 <dl id="designSkills" class="chart donut-chart" data-arc-inner-radius-percent="50" data-arc-outer-radius-percent="100" data-show-percentage="false">
-                                    <dt data-color="#AA71AE">Web frameworks</dt>
-                                    <dd>25</dd>
-                                    <dt data-color="#E17C88">Front-end HTML/CSS</dt>
-                                    <dd>15</dd>
+                                    <dt data-color="#E17C88">Full-stack development</dt>
+                                    <dd>30</dd>
                                     <dt data-color="#B4B8A6">API server/consumer</dt>
-                                    <dd>15</dd>
+                                    <dd>25</dd>
                                     <dt data-color="#5F3661">Algorithm design</dt>
-                                    <dd>20</dd>                                    
-                                    <dt data-color="#E1DD7C">Big data & analytics</dt>
+                                    <dd>20</dd>
+                                    <dt data-color="#E1DD7C">Data science & analytics</dt>
                                     <dd>15</dd>
                                     <dt data-color="#BB7079">System administration</dt>
                                     <dd>10</dd>
@@ -188,7 +186,7 @@ layout: default
                         <h3 class="h3-style">Honours and Awards</h3>
                         <ul class="item-list list-half-margin-bottom">
                             <li>
-                                <p><span class="title-style">Robbert Mitchell Medal</span>
+                                <p><span class="title-style">Robert Mitchell Medal</span>
                                     <br>University of Westminster</p>
                             </li>
                         </ul>
