--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
-                <h2 class="h2-style">I am {{ site.title }}</h2>
+                <h2 class="h2-style">&nbsp;</h2>
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="photo text-center">
