--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@ layout: default
             <div class="col-sm-10 col-sm-offset-1">
                 <h2 class="h2-style">&nbsp;</h2>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                         <div class="photo text-center">
                             <img src="{{ site.avatar }}" alt="{{ site.title }}" class="img-thumbnail">
                         </div>
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-sm-9">
                         <div class="intro">
-                            <p class="drop-cap">Pushing boundaries, exciting new challenges, that's what drives me. Those boundaries are sometimes physical. I cross borders to discover new languages and cultures. At other times my boundaries are technological. So I turn to state-of-the-art technologies to overcome technical barriers. At all times, pushing the boundaries is an immensely rewarding experience.</p>
-                            <p>I'm a software engineer perpetually on the lookout for challenging new projects. I'm an inspiring technologists in search of creative solutions and engineering excellence. In my professional life I like to draw on personal experiences. My creativity is in no small part due to years of travel and an itinerant lifestyle. I draw enormous inspiration from languages and cultures.</p>
-                            <p>A new language may take years to master. A different culture can be confounding at first. But learning about both changes your worldview for good. New programming languages and different modelling paradigms serve the same purpose to a software engineer in search of excellence, they open up a host of potential solutions. That's why I collect all with a passion.</p>
+                            <p class="drop-cap">My boundaries are sometimes physical. I cross borders to discover new languages and cultures. At other times my boundaries are technological. So I turn to new technologies to overcome technical barriers. Pushing boundaries is a very rewarding experience.</p>
+                            <p>I'm a <a href="http://manifesto.softwarecraftsmanship.org/" target="_blank" title="Manifesto for Software Craftsmanship">software craftsman</a> and an inspiring technologist in search of creative challenges, innovative solutions and engineering excellence. My creativity is in no small part due to years of travel and an itinerant lifestyle. I draw enormous inspiration from languages and cultures.</p>
+                            <p>A new language may take years to master. A different culture can be confounding at first. But learning about both changes your worldview for good. Programming languages and hacker communities serve this purpose to a software craftsman, they open up exciting new possibilities.</p>
                         </div>
                     </div>
                 </div>
@@ -32,6 +32,69 @@ layout: default
                 <h2 class="h2-style">Curriculum vit&aelig;</h2>
                 <div class="row">
                     <div class="col-md-7">
+                        <h3 class="h3-style">Experience</h3>
+                        <ul class="item-list">
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">Free Press Unlimited</p>
+                                        <p class="tag sm-text-center">early 2015</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Project Coordinator</p>
+                                        <p>Internet Protection Lab's GCCS2015 Global Conference on Cyberspace Project Coordinator</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">Out of Bounds</p>
+                                        <p class="tag sm-text-center">2014 - ongoing</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Founder and owner</p>
+                                        <p>Out of Bounds: exceptional technology</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">CroMiDo</p>
+                                        <p class="tag sm-text-center">2012 - ongoing</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Chief Technology Officer</p>
+                                        <p>CroMiDo is a lean start-up that aims to disrupt the charity industry through technological innovation. We enable donors to transfer small amounts of money transparently and instantaneously to people in need anywhere in the world. <a href="http://www.cromido.org" title="CroMiDo Association" target="_blank">Find out more&nbsp;&rarr;</a></p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">Dutch Embassy</p>
+                                        <p class="tag sm-text-center">2011 - 2015</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Digital Communications Officer</p>
+                                        <p>&nbsp;</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">Radio Zamaneh</p>
+                                        <p class="tag sm-text-center">2009 - 2010</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Multimedia Specialist</p>
+                                        <p>&nbsp;</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                         <h3 class="h3-style">Education</h3>
                         <ul class="item-list">
                             <li>
@@ -82,106 +145,42 @@ layout: default
                                 </div>
                             </li>
                         </ul>
-                        <h3 class="h3-style">Experience</h3>
-                        <ul class="item-list">
-                            <li>
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">CroMiDo</p>
-                                        <p class="tag sm-text-center">Apr. 2012- Now</p>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <p class="title-style">Chief Technology Officer</p>
-                                        <p>CroMiDo is a lean start-up that aims to disrupt the charity industry through technological innovation. We enable donors to transfer small amounts of money transparently and instantaneously to people in need anywhere in the world. <a href="http://www.cromido.org" title="CroMiDo Association" target="_blank">Find out more&nbsp;&rarr;</a></p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">Dutch Embassy</p>
-                                        <p class="tag sm-text-center">Aug. 2010 - Now</p>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <p class="title-style">Digital Communications Officer</p>
-                                        <p>&nbsp;</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">Radio Zamaneh</p>
-                                        <p class="tag sm-text-center">2009 - 2010</p>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <p class="title-style">Multimedia Specialist</p>
-                                        <p>&nbsp;</p>
-                                    </div>
-                                </div>
-                            </li>
                     </div>
                     <div class="col-md-4 col-md-offset-1">
                         <h3 class="h3-style">Skills</h3>
                         <ul class="item-list">
                             <li>
-                                <p>I have a strong preference for <strong>declarative programming</strong> (functional, logic programming etc.) but I'm also very familiar with <strong>object-oriented design</strong>.</p>
+                                <p>I have a preference for <strong>declarative programming</strong> (functional, logic, etc.) and I'm very familiar with <strong>object-oriented design</strong>.</p>
                                 <dl id="softwareSkills" class="chart donut-chart" data-arc-inner-radius-percent="50" data-arc-outer-radius-percent="100" data-show-percentage="false">
-                                    <dt data-color="#FF6D70">Functional</dt>
-                                    <dd>35</dd>
-                                    <dt data-color="#E89D63">Logic</dt>
-                                    <dd>30</dd>
-                                    <dt data-color="#FFC16D">Object-oriented</dt>
-                                    <dd>30</dd>
                                     <dt data-color="#7F6B63">Imperative</dt>
-                                    <dd>5</dd>
+                                    <dd>1</dd>
+                                    <dt data-color="#FFC16D">Object-oriented</dt>
+                                    <dd>2</dd>
+                                    <dt data-color="#E89D63">Logic</dt>
+                                    <dd>3</dd>
+                                    <dt data-color="#FF6D70">Functional</dt>
+                                    <dd>4</dd>
                                 </dl>
                             </li>
                             <li>
                                 <dl id="codingSkills" class="chart progress-chart" data-symbol-font-awesome-class="fa-stop">
                                     <dt>Python</dt>
                                     <dd>10</dd>
-                                    <dt>JavaScript</dt>
-                                    <dd>9</dd>
                                     <dt>Prolog</dt>
+                                    <dd>9</dd>
+                                    <dt>JavaScript</dt>
                                     <dd>9</dd>
                                     <dt>Java/C++</dt>
                                     <dd>8</dd>
-                                    <dt>Matlab</dt>
+                                    <dt>Elixir/OTP</dt>
                                     <dd>6</dd>
+                                    <dt>Matlab</dt>
+                                    <dd>5</dd>
                                 </dl>
                             </li>
                             <li>
-                                <p>I'd like to get more exposure to languages such as <strong>Haskell</strong>, <strong>Clojure</strong>, <strong>miniKanren</strong> and <strong>Elm</strong>.</p>
+                                <p>I'd like to get more exposure to <strong>Elixir</strong>, <strong>Clojure</strong> and <strong>miniKanren</strong>.</p>
                             </li>
-                            <li>
-                                <p>I have a well-rounded DevOps skill.</p>
-                                <dl id="designSkills" class="chart donut-chart" data-arc-inner-radius-percent="50" data-arc-outer-radius-percent="100" data-show-percentage="false">
-                                    <dt data-color="#E17C88">Full-stack development</dt>
-                                    <dd>30</dd>
-                                    <dt data-color="#B4B8A6">API server/consumer</dt>
-                                    <dd>25</dd>
-                                    <dt data-color="#5F3661">Algorithm design</dt>
-                                    <dd>20</dd>
-                                    <dt data-color="#E1DD7C">Data science & analytics</dt>
-                                    <dd>15</dd>
-                                    <dt data-color="#BB7079">System administration</dt>
-                                    <dd>10</dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <p>My toolkit includes <strong>Django</strong>, <strong>Flask</strong> and <strong>AngularJS</strong>.</p>
-                            </li>
-                            <li>
-                                <p>The programmer I am.</p>
-                                <dl id="codingSkills" class="chart progress-chart" data-symbol-font-awesome-class="fa-stop">
-                                    <dt>Prototyping</dt>
-                                    <dd>10</dd>
-                                    <dt>DRY</dt>
-                                    <dd>9</dd>
-                                    <dt>Iterative</dt>
-                                    <dd>7</dd>
-                                </dl>
                         </ul>
                         <h3 class="h3-style">Honours and Awards</h3>
                         <ul class="item-list list-half-margin-bottom">
@@ -232,15 +231,15 @@ layout: default
                         <table class="contact-info-table">
                             <tr>
                                 <td><i class="fa fa-laptop"></i></td>
-                                <td>www.marceloomens.com</td>        
+                                <td>{{ site.url }}</td>        
                             </tr>
                             <tr>
                                 <td><i class="fa fa-envelope-o"></i></td>
-                                <td><a href="mailto:{{ site.email }}">mail@marceloomens.com</a></td>        
+                                <td><a href="mailto:{{ site.email }}">{{ site.email }}</a></td>        
                             </tr>
                             <tr>
                                 <td><i class="fa fa-mobile-phone"></i></td>
-                                <td>+86 159 0102 7274</td>        
+                                <td>{{ site.mobile }}</td>        
                             </tr>
                         </table>
                         <h3 class="h3-style">Get Social</h3>
